--- a/webpack-react/public/index.html
+++ b/webpack-react/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" />
     </head>
     <body>
         <div id="wrapper"></div>
 
-        <script src="dist/main.js"></script>
+        <script src="/bundle.js"></script>
     </body>
 </html>
